Fix: website scroll-x on iOS

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -39,6 +39,7 @@ body {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	color: #FFFFFF;
+	background-color: #000000;
 
 	@media (max-width: 1440px) {
 		font-size: 14px;
